--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -64,3 +64,6 @@ $screen-large: 1300px;
 
 $font-main: "Source Sans Pro", Arial, sans-serif;
 $font-editor: "Roboto Mono", monospace;
+
+
+$panel-width: $nav-width * 4;
