--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -50,10 +50,10 @@ $default-bg-preview-header: #f2f2f2;
 $default-bg-preview-body: $white;
 $default-preview-text-color: #212121;
 
-$nav-height:            65px;
+$header-height:            65px;
 $nav-width:             75px;
-$tools-height:          30px;
-$input-title-height:    58px;
+// $tools-height:          30px;
+$sub-header-height:     50px;
 $notespanel-width:      $nav-width * 4;
 $notesinfo-width:       280px;
 $actions-sidebar-width: 74px;
