--- a/components/jade/index.jade
+++ b/components/jade/index.jade
@@ -116,7 +116,8 @@ html
                         li.tag: span +
                 #edit-body
                     input(placeholder="Add a title...")
-                    .content(contenteditable="true" data-text="Enter text here")
+                    textarea(placeholder="Enter text here")
+                    // .content(contenteditable="true" data-text="Enter text here")
                 // #actions-sidebar
                 //     ul
                 //         li: span.action.fa.fa-floppy-o
