--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "mixins";
 @import "extends";
-@import "components";
-// @import "glyphicons";
+@import "base";
+@import "app";
+@import "login";
 @import "font-awesome/font-awesome";
