--- a/components/ready/style.css
+++ b/components/ready/style.css
@@ -192,6 +192,7 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
@@ -332,6 +333,8 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box;
 }
@@ -438,6 +441,7 @@ ul {
   min-height: 500px;
   min-width: 700px;
   overflow: hidden;
+  transform: translateX(22%);
   box-shadow: 0 3px 8px #676767;
 }
 
