--- a/components/sass/_mixins.scss
+++ b/components/sass/_mixins.scss
@@ -32,7 +32,9 @@
 }
 
 @mixin borderbox {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    // -webkit-box-sizing: border-box;
+    //    -moz-box-sizing: border-box;
+    //     -ms-box-sizing: border-box;
+            box-sizing: border-box;
 }
+
